testing continuous integration to tutum again

--- a/ssbuilder-web/public/index.html
+++ b/ssbuilder-web/public/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Social Story Builder</title>
+    <title>Social Story Builder - Continuously Deployed</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="libs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
