--- a/ssbuilder-web/public/index.html
+++ b/ssbuilder-web/public/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Social Story Builder - Continuously Deployed</title>
+    <title>Social Story Builder</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="libs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -32,7 +32,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Social Story Builder</a>
+                <a class="navbar-brand" href="#">Social Story Builder - Continuously Deployed on Tutum</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
