Added editor for social stories.

--- a/ssbuilder-web/public/stories.html
+++ b/ssbuilder-web/public/stories.html
@@ -12,10 +12,10 @@
     <title>Social Story Builder</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="libs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/libs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/story-list.css" rel="stylesheet">
+    <link href="/css/story-list.css" rel="stylesheet">
 
 </head>
 
