--- a/startbootstrap-front_page-1.0.4/index.html
+++ b/startbootstrap-front_page-1.0.4/index.html
@@ -20,6 +20,7 @@
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -43,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="#">Welcome to the Social Story</a>
+                <a class="navbar-brand topnav" href="#">Welcome to the Social Story Builder</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -76,9 +77,15 @@
                         <h1>Welcome</h1>
                         <h1>Social Story Builder</h1>
                         <hr class="intro-divider">
-                        <ul class="list-inline intro-social-buttons">
-
-                        </ul>
+                        <ul class="list-inline intro-social-buttons"></ul>
+                    </div>
+                    <div class="container">
+                        <form class="form">
+                            <input type="text" placeholder="Username">
+                            <input type="password" placeholder="Password">
+                            <button type="submit" id="login-button">Login</button>
+                            <button type="submit" id="login-button">New User</button>
+                        </form>
                     </div>
                 </div>
             </div>
